; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/frv/kernel/extr_irq-mb93493.c_frv_mb93493_mask.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/frv/kernel/extr_irq-mb93493.c_frv_mb93493_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IRQ_ROUTING = common dso_local global i32 0, align 4
@IRQ_BASE_MB93493 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @frv_mb93493_mask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @frv_mb93493_mask(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* @IRQ_ROUTING, align 4
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @IRQ_BASE_MB93493, align 4
  %8 = sub i32 %6, %7
  %9 = shl i32 1, %8
  %10 = and i32 %5, %9
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %1
  %13 = call i8* @__addr_MB93493_IQSR(i32 1)
  store i8* %13, i8** %4, align 8
  br label %16

14:                                               ; preds = %1
  %15 = call i8* @__addr_MB93493_IQSR(i32 0)
  store i8* %15, i8** %4, align 8
  br label %16

16:                                               ; preds = %14, %12
  %17 = load i8*, i8** %4, align 8
  %18 = call i32 @readl(i8* %17)
  store i32 %18, i32* %3, align 4
  %19 = load i32, i32* %2, align 4
  %20 = load i32, i32* @IRQ_BASE_MB93493, align 4
  %21 = sub i32 %19, %20
  %22 = add i32 %21, 16
  %23 = shl i32 1, %22
  %24 = xor i32 %23, -1
  %25 = load i32, i32* %3, align 4
  %26 = and i32 %25, %24
  store i32 %26, i32* %3, align 4
  %27 = load i32, i32* %3, align 4
  %28 = load i8*, i8** %4, align 8
  %29 = call i32 @writel(i32 %27, i8* %28)
  ret void
}

declare dso_local i8* @__addr_MB93493_IQSR(i32) #1

declare dso_local i32 @readl(i8*) #1

declare dso_local i32 @writel(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
